kube/aws/task_processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-processor
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: task-processor
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: task-processor
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: task-processor
      annotations:
        vpc.amazonaws.com/resource-limits: '{"vpc-cni-network-config": "true"}'
    spec:
      containers:
      - name: task-processor
        image: luminainc/task-processor:d9e237f
        imagePullPolicy: Always
